--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(Backpropagation)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp Neuron.cpp Neuron.h)
+find_package(OpenCV REQUIRED)
+set(SOURCE_FILES main.cpp Neuron.cpp Neuron.h Layers.cpp Layers.h)
 add_executable(Backpropagation ${SOURCE_FILES})
+target_link_libraries(Backpropagation ${OpenCV_LIBS})
