--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(Backpropagation)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package(OpenCV REQUIRED)
-set(SOURCE_FILES main.cpp Neuron.cpp Neuron.h Layers.cpp Layers.h)
+set(SOURCE_FILES main.cpp Neuron.cpp Neuron.h Layers.cpp Layers.h Image_saver.cpp Image_saver.h)
 add_executable(Backpropagation ${SOURCE_FILES})
 target_link_libraries(Backpropagation ${OpenCV_LIBS})
